--- a/magazine.html
+++ b/magazine.html
@@ -279,6 +279,42 @@
 					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre2.jpg" width="68" height="90" alt=""></a>
 				</li>
 				<li>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre1.jpg" width="68" height="90" alt=""></a>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre2.jpg" width="68" height="90" alt=""></a>
+				</li>
+				<li>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre1.jpg" width="68" height="90" alt=""></a>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre2.jpg" width="68" height="90" alt=""></a>
+				</li>
+				<li>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre1.jpg" width="68" height="90" alt=""></a>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre2.jpg" width="68" height="90" alt=""></a>
+				</li>
+				<li>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre1.jpg" width="68" height="90" alt=""></a>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre2.jpg" width="68" height="90" alt=""></a>
+				</li>
+				<li>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre1.jpg" width="68" height="90" alt=""></a>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre2.jpg" width="68" height="90" alt=""></a>
+				</li>
+				<li>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre1.jpg" width="68" height="90" alt=""></a>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre2.jpg" width="68" height="90" alt=""></a>
+				</li>
+				<li>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre1.jpg" width="68" height="90" alt=""></a>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre2.jpg" width="68" height="90" alt=""></a>
+				</li>
+				<li>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre1.jpg" width="68" height="90" alt=""></a>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre2.jpg" width="68" height="90" alt=""></a>
+				</li>
+				<li>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre1.jpg" width="68" height="90" alt=""></a>
+					<a href="#journal/17" data-liquidslider-ref="main-slider"><img src="./images/page_pre2.jpg" width="68" height="90" alt=""></a>
+				</li>
+				<li>
 					<a href="#journal/19" data-liquidslider-ref="main-slider"><img src="./images/last_pre.jpg" width="68" height="90" alt=""></a>
 				</li>
 			</ul>
